[package]
name = "cross_bow"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-files = "0.6"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTML templating
maud = { version = "0.25", features = ["actix-web"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Cryptography for webhook signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2.5"

# UUID
uuid = { version = "1.6", features = ["serde", "v4"] }

# Configuration
dotenvy = "0.15"

# Logging
env_logger = "0.11"
log = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
